fixed Stream.collect